style(home-page): fixed covering of background

--- a/src/app/utils.scss
+++ b/src/app/utils.scss
@@ -7,5 +7,5 @@
 .page-background {
     height: 100%;
     margin: 0 !important;
-    background: #e9ffff url("../shared/assets/bg.png") no-repeat;
+    background: #e9ffff url("../shared/assets/bg.png") no-repeat center/cover;
 }
